Changes towards version 0.4:
- Separated and abstracted sound buffer-tagging and trackplayer
  clip/subtitle chaining -Alex
- Abstracted the recursive mutexes in MixSDL and DCQ code -Michael
- Introduced a new synchronization construct (CrossThreadMutex) and 
  migrated the GraphicsSem and clock_sem over to it (#359) -Michael
- Replaced thread-local Semaphores with Mutexes (#359) -Michael
- Load/save icons don't flash anymore when in savegame menu
  (part of bug #291), from Paxtez
- Savegame slot now defaults to the last one used during one execution
  of uqm (bug #477), from chmmravatar
- Fixed one-pixel glitch in shipyard when scrapping (bug #461),
  from Paxtez
- Adjusted subtitle timings when there are no oggs (part of bug #362),
  from chmmravatar
- Fixed crash in conversation summary and ffw/frew problem when
  selling data to Melnorme (bug #476), from chmmravatar
- Flush input after selecting "Navigate" (bug #475) - Michael
- Fixed ships in solar system getting displaced after having
  visited a planet (bug #365) -Alex
- Fixed collisions/encounters with "invisible" fleeing ships
  (bug #319) -Alex
- Quit confirmation fixes: lander reports, conversation summaries,
  outtakes, end credits; font effect properly set/saved/restored;
  (bugs #454, #465, #466); from chmmravatar
- Obsolete "register" keywords removed -Michael

Changes towards version 0.3:
- Dirty hack to avoid a warning about the "ignored.key" hack - Svdb
- Typo 'natually' fixed in Arilou speech - SvdB
- uio: Fixed a bug which could cause spurious warnings when using .zip files
  generated from DOS/Windows - SvdB
- uio: Fixed a potentially memory-corrupting bug when in a .zip file a subdir
  is described before a dir higher in the directory structure.
- uio: Fixed an incomplete message that would only show when handling a
  specific error - SvdB
- Added doc/checklist file - SvdB
- RUs properly cleared in savegame display, from Paxtez, chmmravatar
- Support for up to 50 savegames, from Paxtez